force-app/main/default/objects/ssot__CommunicationSubscriptionTiming__dlm/fields/ssot__CommunicationSubscriptionConsentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CommunicationSubscriptionConsentId__c</fullName>
    <label>Communication Subscription Consent</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CommunicationSubscriptionConsentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>