force-app/main/default/objects/ssot__CommunicationSubscriptionTiming__dlm/fields/ssot__rel_1697761157143_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761157143_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CommunicationSubscriptionConsent_Id__rel</label>
    <referenceTo>ssot__CommunicationSubscriptionConsent__dlm</referenceTo>
    <relationshipLabel>CommunicationSubscriptionConsent_Id__rel</relationshipLabel>
    <relationshipName>rel_1697761157143_end</relationshipName>
    <type>Lookup</type>
</CustomField>